--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1221,10 +1221,6 @@ body {
   border-width: 0px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border-4 {
   border-width: 4px;
 }
@@ -1243,6 +1239,11 @@ body {
 
 .border-none {
   border-style: none;
+}
+
+.border-accent_purple {
+  --tw-border-opacity: 1;
+  border-color: rgb(119 35 213 / var(--tw-border-opacity, 1));
 }
 
 .border-blue-600 {
@@ -1284,6 +1285,10 @@ body {
   border-color: rgb(12 10 9 / var(--tw-border-opacity, 1));
 }
 
+.border-white\/20 {
+  border-color: rgb(255 255 255 / 0.2);
+}
+
 .border-zinc-600 {
   --tw-border-opacity: 1;
   border-color: rgb(82 82 91 / var(--tw-border-opacity, 1));
@@ -1296,6 +1301,16 @@ body {
 
 .\!bg-black\/90 {
   background-color: rgb(0 0 0 / 0.9) !important;
+}
+
+.bg-accent_blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 93 216 / var(--tw-bg-opacity, 1));
+}
+
+.bg-accent_purple {
+  --tw-bg-opacity: 1;
+  background-color: rgb(119 35 213 / var(--tw-bg-opacity, 1));
 }
 
 .bg-background {
@@ -1344,13 +1359,17 @@ body {
   background-color: hsl(var(--primary));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
 .bg-secondary {
   background-color: hsl(var(--secondary));
+}
+
+.bg-secondary_bg {
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 12 12 / var(--tw-bg-opacity, 1));
+}
+
+.bg-secondary_bg\/95 {
+  background-color: rgb(12 12 12 / 0.95);
 }
 
 .bg-slate-600 {
@@ -1372,9 +1391,14 @@ body {
   background-color: rgb(109 40 217 / var(--tw-bg-opacity, 1));
 }
 
-.bg-white {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-br {
@@ -1391,17 +1415,18 @@ body {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-accent_purple {
+  --tw-gradient-from: #7723D5 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(119 35 213 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-rose-600 {
   --tw-gradient-to: #e11d48 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
   background-size: cover;
-}
-
-.bg-clip-text {
-  -webkit-background-clip: text;
-          background-clip: text;
 }
 
 .bg-center {
@@ -1681,9 +1706,9 @@ body {
   color: rgb(203 213 225 / var(--tw-text-opacity, 1)) !important;
 }
 
-.text-blue-600 {
+.text-accent_purple {
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity, 1));
+  color: rgb(119 35 213 / var(--tw-text-opacity, 1));
 }
 
 .text-cyan-600 {
@@ -1747,10 +1772,6 @@ body {
 .text-slate-500 {
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity, 1));
-}
-
-.text-transparent {
-  color: transparent;
 }
 
 .text-violet-600 {
@@ -1958,18 +1979,18 @@ html {
   border-color: rgb(8 145 178 / var(--tw-border-opacity, 1));
 }
 
-.hover\:border-rose-600:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(225 29 72 / var(--tw-border-opacity, 1));
-}
-
 .hover\:bg-accent:hover {
   background-color: hsl(var(--accent));
 }
 
-.hover\:bg-blue-600:hover {
+.hover\:bg-accent_blue:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+  background-color: rgb(36 93 216 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-accent_purple:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(119 35 213 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-destructive\/90:hover {
@@ -2004,6 +2025,23 @@ html {
 
 .hover\:bg-white\/20:hover {
   background-color: rgb(255 255 255 / 0.2);
+}
+
+.hover\:bg-accent_purple\/95:hover {
+  background-color: rgb(119 35 213 / 0.95);
+}
+
+.hover\:bg-accent_purple\/90:hover {
+  background-color: rgb(119 35 213 / 0.9);
+}
+
+.hover\:bg-accent_purple\/80:hover {
+  background-color: rgb(119 35 213 / 0.8);
+}
+
+.hover\:bg-red-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-accent-foreground:hover {
@@ -2460,6 +2498,18 @@ html {
 
 .\[\&\>\*\]\:font-light>* {
   font-weight: 300;
+}
+
+.\[\&\>\*\]\:font-semibold>* {
+  font-weight: 600;
+}
+
+.\[\&\>\]\:font-semibold> {
+  font-weight: 600;
+}
+
+.\[\&\>button\]\:font-semibold>button {
+  font-weight: 600;
 }
 
 .\[\&\>svg\]\:size-4>svg {
