--- a/client/src/output.css
+++ b/client/src/output.css
@@ -567,7 +567,7 @@ video {
   --secondary-foreground: 0 0% 9%;
   --muted: 0 0% 96.1%;
   --muted-foreground: 0 0% 45.1%;
-  --accent: 0 0% 96.1%;
+  --accent: 0 0% 14.9%;
   --accent-foreground: 0 0% 9%;
   --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 0 0% 98%;
@@ -1175,6 +1175,10 @@ body {
   white-space: nowrap;
 }
 
+.\!rounded-xl {
+  border-radius: 0.75rem !important;
+}
+
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -1201,18 +1205,6 @@ body {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.\!rounded-sm {
-  border-radius: calc(var(--radius) - 4px) !important;
-}
-
-.\!rounded-lg {
-  border-radius: var(--radius) !important;
-}
-
-.\!rounded-xl {
-  border-radius: 0.75rem !important;
 }
 
 .rounded-b-none {
@@ -1306,8 +1298,9 @@ body {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
 }
 
-.\!bg-black\/90 {
-  background-color: rgb(0 0 0 / 0.9) !important;
+.\!bg-secondary_bg {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(12 12 12 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-accent_blue {
@@ -1401,10 +1394,6 @@ body {
 .bg-violet-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(109 40 217 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .bg-cover {
@@ -1974,6 +1963,10 @@ html {
   background-color: rgb(119 35 213 / 0.8);
 }
 
+.hover\:bg-accent_purple\/90:hover {
+  background-color: rgb(119 35 213 / 0.9);
+}
+
 .hover\:bg-destructive\/90:hover {
   background-color: hsl(var(--destructive) / 0.9);
 }
@@ -2290,11 +2283,6 @@ html {
     padding-right: 0.5rem !important;
   }
 
-  .sm\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
   .sm\:pb-0 {
     padding-bottom: 0px;
   }
@@ -2415,11 +2403,6 @@ html {
   .lg\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
-  }
-
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 }
 
